--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 		<label for="name">Name:</label>
 		<input type="text" id="name" name="name" placeholder="Name" required>
 		<br>
-		<label for="name">Email:</label>
+		<label for="email">Email:</label>
 		<input type="email" id="email" name="email" placeholder="Email" required>
 		<br>
 		<label>Gender:</label><br>
